# RAM-based-cache-for-dbs

./: .gitignore  CMakeLists.txt  Makefile  README.md  cli.cpp  client.cpp  core.cpp  logs\differentiallogs.txt  main.cpp  my-own-redis.service  server.cpp  service.cpp  test.cpp  utils.cpp
cache/: client.h  core.h  flags.h  server.h  utils.h
core/: core.cpp  core.h
logs/: differentiallogs.txt  tablecapturelog.txt
